force-app/main/default/objects/BGCK__Checklist_Version__c/BGCK__Checklist_Version__c.object-meta.xml
<CustomObject>
    <label>Checklist Version</label>
    <nameField>
        <displayFormat>CV{000000}</displayFormat>
        <label>Checklist Version Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Checklist Versions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>