force-app/main/default/objects/BGCK__Checklist_Version__c/fields/BGCK__BG_Checklist_Name__c.field-meta.xml
<CustomField>
    <fullName>BGCK__BG_Checklist_Name__c</fullName>
    <label>Checklist Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>