force-app/main/default/objects/BGCK__Checklist_Version__c/fields/BGCK__BG_Checklist_Title__c.field-meta.xml
<CustomField>
    <fullName>BGCK__BG_Checklist_Title__c</fullName>
    <description>The title that users will see when filling out checklists with this version. Will be a link back to the parent record. Supports merge fields on the parent object.</description>
    <inlineHelpText>The title that users will see when filling out checklists with this version. Will be a link back to the parent record. Supports merge fields on the parent object.</inlineHelpText>
    <label>Checklist Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>