force-app/main/default/objects/BGCK__Checklist_Version__c/fields/BGCK__BG_Field_Set_Name__c.field-meta.xml
<CustomField>
    <fullName>BGCK__BG_Field_Set_Name__c</fullName>
    <inlineHelpText>The API name of a field set on Page Question object, used to control the fields shown when editing page question eligibility.</inlineHelpText>
    <label>Field Set Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>