force-app/main/default/objects/BGCK__Checklist_Version__c/fields/BGCK__Page__c.field-meta.xml
<CustomField>
    <fullName>BGCK__Page__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Page</label>
    <referenceTo>BGCK__Page__c</referenceTo>
    <relationshipLabel>Checklist Versions</relationshipLabel>
    <relationshipName>Checklist_Versions</relationshipName>
    <type>Lookup</type>
</CustomField>