force-app/main/default/objects/BGCK__Checklist_Version__c/fields/BGCK__Version__c.field-meta.xml
<CustomField>
    <fullName>BGCK__Version__c</fullName>
    <label>Version</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>