force-app/main/default/objects/BGCK__Checklist_Version__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>BGCK__Checklist__c</columns>
    <columns>BGCK__Page__c</columns>
    <columns>BGCK__Question__c</columns>
    <columns>BGCK__Status__c</columns>
    <columns>BGCK__Version__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>